--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
     <title></title>
-    <base href="/">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="html/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
-    <script src="html/app.js"></script>
+    <script src="app.js"></script>
 </head>
 <body ng-app="lookup" ng-controller="AppCtrl">
 
