--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
                     <tr ng-if="org_data.hjemmeside"><td>Hjemmeside</td><td><a href="http://{{org_data.hjemmeside}}" target="_blank">{{org_data.hjemmeside}}</a></td></tr>
                     <tr><td>Målfrom</td><td>{{org_data.maalform}}</td></tr>
                     <tr><td>Antall ansatte</td><td>{{org_data.antallAnsatte}}</td></tr>
+                    <tr><td>Konkurs</td><td>{{org_data.konkurs == "J" ? "Ja" : "Nei" }}</td></tr>
+                    <tr><td>Under avvikling</td><td>{{org_data.under_avvikling == "J" ? "Ja" : "Nei" }}</td></tr>
+                    <tr><td>Under tvangsavvikling eller tvangsoppløsning</td><td>{{org_data.underTvangsavviklingEllerTvangsopplosning == "J" ? "Ja" : "Nei" }}</td></tr>
                     <tr><td>Organisasjonsform</td><td>{{org_data.orgform.beskrivelse}}</td></tr>
                     <tr><td>Institusjonell sektorkode</td><td>{{ k = org_data.institusjonellSektorkode; k.kode + ' - ' + k.beskrivelse}}</td></tr>
                     <tr><td>Næringskode</td><td>{{ k = org_data.naeringskode1; k.kode + ' - ' + k.beskrivelse}}</td></tr>
